--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/plugin-transform-runtime": "^7.14.3",
     "@sendgrid/mail": "^7.7.0",
     "async-request": "^1.2.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.0.1",
     "bcrypt-nodejs": "^0.0.3",
     "compression": "^1.7.4",
@@ -51,6 +52,7 @@
     "mongoose-sequence": "^5.3.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "openai": "^3.2.1",
     "recaptcha-v2": "^0.1.3",
     "referral-codes": "^2.0.1",
     "rotating-file-stream": "^2.1.5",
