--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is Backend Side for ApiInfra site.",
   "main": "admin.js",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "node --trace-warnings src/admin.js"
   },
   "keywords": [],
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.14.3",
+    "@pinecone-database/pinecone": "^0.1.5",
     "@sendgrid/mail": "^7.7.0",
     "async-request": "^1.2.0",
     "bcrypt": "^5.0.1",
@@ -28,7 +30,7 @@
     "cors": "^2.8.5",
     "cron": "^2.1.0",
     "crypto-js": "^4.1.1",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "eslint": "^4.18.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.9.0",
@@ -40,21 +42,27 @@
     "express-rate-limit": "^6.4.0",
     "express-useragent": "^1.0.15",
     "fast-xml-parser": "^4.0.9",
+    "fs": "^0.0.1-security",
     "geoip-lite": "^1.4.4",
     "himalaya": "^1.1.0",
     "http-build-query": "^0.7.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
+    "langchain": "^0.0.75",
     "md5": "^2.3.0",
     "method-override": "^3.0.0",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^6.0.9",
     "mongoose-sequence": "^5.3.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
+    "multer": "^1.4.4",
+    "pdf-parse": "^1.1.1",
     "recaptcha-v2": "^0.1.3",
     "referral-codes": "^2.0.1",
     "rotating-file-stream": "^2.1.5",
+    "serpapi": "^1.1.1",
     "socket.io": "^2.3.0",
+    "uniqid": "^5.4.0",
     "urlparser": "^0.3.9"
   }
 }
