--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "cron": "^2.1.0",
     "crypto-js": "^4.1.1",
+    "d3-dsv": "^2.0.0",
     "dotenv": "^8.6.0",
     "eslint": "^4.18.1",
     "eslint-config-standard": "^11.0.0",
@@ -50,6 +51,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "langchain": "^0.0.75",
+    "mammoth": "^1.5.1",
     "md5": "^2.3.0",
     "method-override": "^3.0.0",
     "moment-timezone": "^0.5.43",
@@ -58,6 +60,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "openai": "^3.2.1",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^3.6.172",
     "recaptcha-v2": "^0.1.3",
     "referral-codes": "^2.0.1",
     "rotating-file-stream": "^2.1.5",
