--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express-rate-limit": "^6.4.0",
     "express-useragent": "^1.0.15",
     "fast-xml-parser": "^4.0.9",
+    "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "geoip-lite": "^1.4.4",
     "himalaya": "^1.1.0",
