--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.5.0",
     "@babel/plugin-transform-runtime": "^7.14.3",
     "@pinecone-database/pinecone": "^0.1.5",
     "@sendgrid/mail": "^7.7.0",
