--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.0.1",
     "bcrypt-nodejs": "^0.0.3",
+    "cohere-ai": "^6.2.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cron": "^2.1.0",
