--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "openai": "^3.2.1",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^3.6.172",
+    "perf_hooks": "^0.0.1",
     "puppeteer": "^20.7.3",
     "recaptcha-v2": "^0.1.3",
     "referral-codes": "^2.0.1",
